[package]
name = "ar-probe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ar-probe"
harness = false


[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp-idf-hal = "0.46.2"
mpu6050 = "0.1.6"

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
esp_idf_config = ["CONFIG_ESP_MAIN_TASK_STACK_SIZE=65536"]
